Fix hero page on mobile view

--- a/src/Components/Styles/Hero.css
+++ b/src/Components/Styles/Hero.css
@@ -79,7 +79,6 @@ main {
 .hero-container{
     display: flex;
     max-height: 500px;
-    margin-top: 80px;
     /* border: 1px solid #c28331; */
     border-radius: 10px;
     flex-wrap: wrap;
@@ -173,7 +172,7 @@ main {
         display:none;
     }
     .body-hero {
-        height: auto;
+        height: fit-content;
     }
     h1, h3{
         padding-left: 0;
